--- a/static/css/colors.css
+++ b/static/css/colors.css
@@ -1,6 +1,6 @@
 :root {
-    --main: #364736;
-    --main-light: #6e8f6e;
+    --main: #569bb3;
+    --main-light: #6cc2e0;
     --dark: #000;
     --dark-light: #101010;
     --white: #eee;
