--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -1,33 +1,1 @@
-<style>
-    @font-face {
-        font-family: 'Open Sans Regular';
-        src: url({{ "fonts/YsabeauSC-VariableFont_wght.ttf" | absURL }}) format('truetype');
-        font-weight: normal;
-        font-style: normal;
-    }
-
-    @font-face {
-        font-family: 'Open Sans Bold';
-        src: url({{ "fonts/YsabeauSC-VariableFont_wght.ttf" | absURL }}) format('truetype');
-        font-weight: bold;
-        font-style: normal;
-    }
-
-    @font-face {
-        font-family: 'Open Sans Italic';
-        src: url({{ "fonts/OpenSans/OpenSans-Italic.ttf" | absURL }}) format('truetype');
-        font-weight: normal;
-        font-style: italic;
-    }
-
-    @font-face {
-        font-family: 'Open Sans Bold Italic';
-        src: url({{ "fonts/OpenSans/OpenSans-BoldItalic.ttf" | absURL }}) format('truetype');
-        font-weight: bold;
-        font-style: italic;
-    }
-
-    body {
-        font-family: "Open Sans Regular";
-    }
-</style>
+{{- /* Font declarations are in static/css/fonts.css, loaded via main.css @import */ -}}
